# Vulkan-on-Android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/include/: transformation.hpp
app/src/androidTest/java/com/jlwuwill/vulkan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  stb_image.h
app/src/main/assets/tavern/model/: Traven.mtl
app/src/main/cpp/: data_type.h  event_loop.cpp  event_loop.hpp  layer_extension.cpp  layer_extension.hpp  log.cpp  log.hpp  main.cpp  renderer.h  tiny_obj_loader.h  types.hpp  vulkan_main.cpp  vulkan_main.h  vulkan_main.hpp
app/src/main/cpp/androidutility/assetmanager/: io_asset.hpp
app/src/main/cpp/androidutility/eventloop/: event_loop.cpp  event_loop.h
app/src/main/cpp/androidutility/log/: log_android.cpp
app/src/main/cpp/log/: log.h
app/src/main/cpp/scene/: scene.cpp  scene.h
app/src/main/cpp/scene/earthscene/: earth_scene.h  earth_scene_renderer.h
app/src/main/cpp/scene/earthscene/android/: earth_scene_android.cpp  earth_scene_renderer_android.cpp
app/src/main/cpp/scene/emptyscene/: empty_scene.h  empty_scene_renderer_vulkan.h
app/src/main/cpp/scene/emptyscene/android/: empty_scene_android.cpp  empty_scene_renderer_vulkan_android.cpp  empty_scene_renderer_vulkan_android.h
app/src/main/cpp/scene/msaascene/: msaa_scene.h  msaa_scene_renderer.h
app/src/main/cpp/scene/msaascene/android/: msaa_scene_android.cpp  msaa_scene_renderer_android.cpp
app/src/main/cpp/scene/stereoviewingscene/: stereo_viewing_scene.h  stereo_viewing_scene_renderer.h
app/src/main/cpp/scene/stereoviewingscene/android/: stereo_viewing_scene_android.cpp  stereo_viewing_scene_renderer_android.cpp
app/src/main/cpp/vulkan/: buffer.cpp  buffer.h  command.cpp  command.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  instance.cpp  instance.h  layer_extension.cpp  layer_extension.h  model.cpp  model.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  vulkan_utility.cpp  vulkan_utility.h  vulkan_workflow.cpp  vulkan_workflow.h
app/src/main/cpp/vulkan/android/: renderer_vulkan_android.cpp  vulkan_android.cpp
app/src/main/cpp/vulkan/model/: model.cpp  model.h  model_resource.cpp  model_resource.h
app/src/main/cpp/vulkan/renderpass/: color_depth_renderpass.cpp  color_depth_renderpass.h  color_dst_renderpass.cpp  color_dst_renderpass.h  msaa_renderpass.cpp  msaa_renderpass.h  msaa_shader_read_renderpass.cpp  msaa_shader_read_renderpass.h  msaa_wo_presentation_prenderpass.h  renderpass.cpp  renderpass.h
app/src/main/cpp/vulkan/texture/: texture.cpp  texture.h  texture2d.cpp
app/src/main/res/values/: strings.xml
app/src/main/shaders/: blinn_phong_shading_wo_normal_map.frag  blinn_phong_shading_wo_normal_map.vert  multiview.vert  phong_shading.frag  phong_shading.vert  triangle.frag  triangle.vert  viewdisplay.frag  viewdisplay.vert
app/src/main/shaders/vr/: blinn_phong_shading.frag  blinn_phong_shading.vert  blinn_phong_shading_wo_normal_map.frag  blinn_phong_shading_wo_normal_map.vert  multiview.frag  texture.frag  texture.vert
app/src/test/java/com/jlwuwill/vulkan/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
layerlib/: CMakeLists.txt  build.gradle
layerlib/src/main/: AndroidManifest.xml
layerlib/src/main/res/values/: strings.xml
vulkanlayerlib/: build.gradle
vulkanlayerlib/src/main/: AndroidManifest.xml
vulkanlayerlib/src/main/res/values/: strings.xml
